	Grunfeld, model = "fd")

	* the lev2var is changed so that it doesn't result in an error
	when the data.frame contains no factor: this was responsible of a
	bug in plm.ht

	
Changes since version 1-1.2

	* the inst directory was missing, it has been added again
	
Changes since version 1-1.3

	* a relevant error message is added when a within model is
	estimated with no time-varying variable

	* the formula method for dynformula objects is now exported

	* a misleading notation was corrected for plm.ht model

	* the definition of sigma2$id for unbalanced ht model is
	corrected, an harmonic mean of Ti being used

	* the definition of tss.default is simplified

	* the fitted.values element was missing for plm objects and has
	been added

Change since version 1-1.4

	* a args argument is added for plm objects, and the internal
	function relies now on it (and not on the call as previously)

	* more attention is paid when one of the estimated components of
	the variance is negative (warning or error messages result)

	* pdata.frame objects are re-introduced. They are used to compute
	model.frames. Extraction from pdata.frames results in 'pserie'
	objects which have an index attribute.

	* the print method of ercomp is now exported

	* the first argument of pgmm may now be a formula. A lag.form must
	be provided in this case
	
	* hausman-taylor estimation is now performe the pht function. For
	backaward compatibility reasons, it is still possible to estimate
	this model with plm

Changes since version 1.2-0	

	* the as.matrix and print methods for pserie objects are now exported

	* in summary.plm, the p-value is now computed using a Student
	distribution and not a normal one

	* the lag.pserie method is modified so that it deals correctly
	with factors, and not only with numeric vectors. The diff.pserie
	method returns an error if its argument is not numeric

	* the instruments-"backward compatility" stuff in plm is
	simplified thanks to the new features of Formula