@@ -65,16 +65,16 @@ S3method(formula, dynformula)
 # vcovHC
 S3method(vcovHC, panelmodel)
 S3method(vcovHC, pgmm)
-# pserie
-S3method(lag, pserie)
-S3method(diff, pserie)
-S3method(between, pserie)
-S3method(Between, pserie)
-S3method(Within, pserie)
-S3method(print, pserie)
-S3method(summary, pserie)
-S3method(print, summary.pserie)
-S3method(as.matrix, pserie)
+# pseries
+S3method(lag, pseries)
+S3method(diff, pseries)
+S3method(between, pseries)
+S3method(Between, pseries)
+S3method(Within, pseries)
+S3method(print, pseries)
+S3method(summary, pseries)
+S3method(print, summary.pseries)
+S3method(as.matrix, pseries)
 # ercomp
 S3method(ercomp, formula)
 S3method(ercomp, plm)
