@@ -1,0 +1,9 @@
+We've benefited of comments and bug reports from many people on
+previous versions of the package. We would like to thank especially :
+Arne Henningsen, Christian Kleiber, Katarzyna Kopczewska, Ott Toomet
+and Achim Zeileis
+
+The package was greatly improved during the revision of the Journal Of
+Statistical Software article, thanks to the helpfull comments of three
+anonymous referees. We especially thank the co-editor of this journal,
+Achim Zeileis, for many interesting comments and suggestions.
